test/seq/cmdlists/invalid_freq_val.err
SyntaxError: Frequency too high (max 1.75GHz)
Line: 2
freq(0) = 1.8 GHz
          ~~~~~~~
